# WebDeck

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
.github/workflows/: main.yml
backend/components/: FirstDesign.css  ThirdDesign.scss
backend/extra/: input.txt
backend/header/: Descriptions.h  EducationDescription.h  LanguageDescription.h  SocialDescription.h  User.h  WorkDescription.h
backend/scripts/: DeleteOutput
backend/src/: EducationDescription.cpp  SocialDescription.cpp  TemplateGenerator.cpp  UserInput.cpp  main.cpp
designs/: FirstDesign.css
src/: App.jsx  main.jsx
src/backend/: CMakeLists.txt
src/backend/components/: ThirdDesign.css
src/backend/header/: ReferenceDescription.h  TemplateGenerator.h  UserInput.h
src/backend/src/: Descriptions.cpp  LanguageDescription.cpp  ReferenceDescription.cpp  User.cpp  WorkDescription.cpp
src/backend/test/: EducationDescriptionTest.cpp  LanguageDescriptionTest.cpp  ReferenceDescriptionTest.cpp  SocialDescriptionTest.cpp  WorkDescriptionTest.cpp  userTest.cpp
src/components/: Banner.jsx  Footer.jsx  InputForm.jsx  StatBubble.jsx  Steps.jsx  index.js
src/functions/: clean.js  generateWebsites.js  handleSubmit.js  index.js
src/pages/: AboutPage.jsx  AccessPage.jsx  CTAPage.jsx  CoverPage.jsx  HomePage.jsx  InputFormPage.jsx  NotFoundPage.jsx  PolicyPage.jsx  StackPage.jsx  TeamPage.jsx  TermsPage.jsx  index.js
src/styles/: App.css  index.css
src/testing/: generateWebsites.test.js
